feat: implement asynchronous order service with saga orchestration and loyalty integration
Developed a robust, event-driven Order Service acting as the orchestrator
for the restaurant's distributed order lifecycle.

Core Features:
- Asynchronous Saga Orchestration: Implemented a full saga flow using
  RabbitMQ to coordinate between Order, Kitchen, Payment, and Loyalty services.
- Order Lifecycle Management: Supports complex state transitions including
  PENDING, AWAITING_PAYMENT, PAID, CONFIRMED, and READY_FOR_PICKUP.
- Loyalty & Points System:
    * Redemption: Integrated point-based discounts (100/200/300 points)
      verified asynchronously via the Loyalty service.
    * Accrual: Automatic reward point calculation and earning (1 pt per )
      upon order confirmation.
- Inventory Integrity:
    * Implemented synchronous stock reservation via Menu Service to
      prevent over-ordering.
    * Automatic stock rollback on payment failures, point redemption
      errors, or manual cancellations.
- Idempotency & Concurrency: Built status-gate checks into all service
  mutators to ensure duplicate events do not trigger redundant processing.
- Advanced Error Handling:
    * REST API: Global exception handling with custom error responses.
    * Background Tasks: Manual intervention logging with explicit
      transactional rollbacks to ensure data consistency without retrying
      toxic messages.
- Polling-Ready Design: Optimized DTOs and retrieval logic to support
  frontend status polling for asynchronous confirmation.

This implementation provides a scalable, resilient foundation for
processing orders across the distributed system.